[EDIT]Kata 11, Kata 10. Kata 11 completada exitosamente y Kata 10 se cambia list por unmodifiableList para cumplir con la inmutabilidad.