@@ -1,11 +1,10 @@
 package co.com.sofka.katas;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import co.com.sofka.util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -57,14 +56,31 @@ import java.util.Map;
     Output: the given datastructure
 */
 public class Kata11 {
+    private Kata11(){
+        throw new IllegalStateException("Kata 11");
+    }
+
     public static List<Map> execute() {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
         List<Map> boxArts = DataUtil.getBoxArts();
         List<Map> bookmarkList = DataUtil.getBookmarkList();
 
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber", "time", 123, "boxart", "someUrl")
-        )));
+        return lists.stream().map(l -> Map.of("name", l.get("name"), "videos",
+                        videos.stream().filter(v -> v.get("listId").equals(l.get("id")))
+                                .map(v -> Map.of("id", v.get("id"), "title", v.get("title"), "time",
+                                        bookmarkList.stream().filter(b -> b.get("videoId").equals(v.get("id")))
+                                                    .map(t -> t.get("time"))
+                                                    .collect(Collectors.toUnmodifiableList()),
+                                                "boxart",
+                                                    boxArts.stream().filter(box -> box.get("videoId").equals(v.get("videoId")))
+                                                            .map(u -> u.get("url"))
+                                                            .findFirst()))
+                                .collect(Collectors.toUnmodifiableList())))
+                .collect(Collectors.toUnmodifiableList());
+    }
+
+    public static Boolean lowerThan(Integer num1, Integer num2){
+        return num1 < num2;
     }
 }
